# sparky-sovereign-sentinel

./: README.md  guardrail.py
sparky_sentinel/: Anchor.toml  Cargo.toml.bak
sparky_sentinel/programs/sparky_sentinel/: Cargo.toml  Cargo.toml.bak
sparky_sentinel/programs/sparky_sentinel/src/: lib.rs
sparky_sentinel/tests/: sparky_sentinel.ts
