[package]
name = "sparky_sentinel"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sparky_sentinel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"

[target.'cfg(not(target_os = "solana"))'.dependencies]
getrandom = { version = "0.1", features = ["dummy"] }
